welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:3: error: illegal start of simple pattern
 var int i=0
          ^PictureMono2:4: error: '=' expected but ';' found.
 for(i=-1 to 21 ){
^PictureMono2:4: error: '<-' expected but ')' found.
 for(i=-1 to 21 ){
                ^PictureMono2:10: error: illegal start of simple expression
}
^